# Engine3D

./: .gitignore  CMakeLists.txt  build.bat
src/: buffer.hpp  camera.hpp  cameraController.hpp  fluidSimulation.hpp  gravitySimulation.hpp  main.cpp  mesh.hpp  shader.hpp  sphere.hpp  transform.hpp  types.hpp  vertex.hpp  window.hpp
src/shaders/: fragment.frag  geometry.geom  vertex.vert
